--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+security.oauth2.client.client-id=test-client
+security.oauth2.client.client-secret=test-secret
+logback.access.enabled=true
